Fix contact on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fac53e;
+  overflow-x: hidden;
 }
 
 code {
