--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -5,6 +5,10 @@
         font-size: 3rem;
         font-weight: bold;
         text-transform: uppercase;
+
+        @media (max-width: $md-breakpoint) {
+            font-size: 2;
+        }
     }
 
     .email-section {
@@ -12,7 +16,6 @@
         margin-top: 5rem;
         padding: 2rem 2rem;
         border-radius: 0 5rem 5rem 0;
-        max-height: 10rem;
         align-self: center;
         margin-right: -5%;
         z-index: 10;
@@ -41,9 +44,6 @@
         }
         margin-top: 2rem;
         z-index: 1;
-        &:hover {
-            border: 1px solid #777;
-        }
     }
 
 }
